--- a/src/client/pages/home.html
+++ b/src/client/pages/home.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="assets/stylesheets/index.css">
     <link rel="stylesheet" href="assets/stylesheets/home.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Faster+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Faster+One&family=Syncopate:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1>Welcome to Pod Racer Sim</h1>
+        <!-- Need to add extra spaces due to font -->
+        <h1>Welcome &nbsp; to &nbsp; Pod &nbsp; Racer &nbsp; Sim</h1>
     </header>
     <main>
         <section>
