--- a/src/client/pages/progress.html
+++ b/src/client/pages/progress.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="assets/stylesheets/index.css">
     <link rel="stylesheet" href="assets/stylesheets/progress.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Faster+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Faster+One&family=Syncopate:wght@700&display=swap" rel="stylesheet">
     <script src="/assets/javascript/index.js" charset="utf-8"></script>
 </head>
 
 <body>
     <header>
-        <h1>Race in Progress</h1>
+        <h1>Race &nbsp; in &nbsp; Progress</h1>
     </header>
     <main id="two-columns">
         <section id="leaderBoard">
@@ -41,7 +41,7 @@
         </section>
 
         <section id="accelerate">
-            <button id="gas-peddle">Click Me Fast!</button>
+            <button id="gas-pedal">Click Me Fast!</button>
         </section>
     </main>
     <footer></footer>
