--- a/src/client/pages/race.html
+++ b/src/client/pages/race.html
@@ -13,28 +13,29 @@
     <link rel="stylesheet" href="assets/stylesheets/progress.css">
     <link rel="stylesheet" href="assets/stylesheets/results.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Faster+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Faster+One&family=Syncopate:wght@700&display=swap" rel="stylesheet">
     <script src="/assets/javascript/index.js" charset="utf-8"></script>
 </head>
 
 <body id="race">
     <header>
-        <h1>Start Your Pod Racer Sim</h1>
+        <h1>Start &nbsp; Your &nbsp; Pod &nbsp; Racer &nbsp; Sim</h1>
     </header>
     <main>
         <section id="create-race">
             <h2>Get Started</h2>
-            <h3>Create Your Race</h3>
             <form id="create-race">
-                <h3>Choose your track (mouse over each to display image)</h3>
-                <ul class="cards-list" id="tracks">
-                    <!-- filled via js -->
-                </ul>
-                <label for="course" class="sr-only">Race Course:</label>
-                <select id="course" name="course" class="required sr-only">
-                    <option value="trackname" id="trackname">test</option>
-                </select>
-
+                <div id = "choose-track">
+                    <h3>Choose your track (mouse over each to display image)</h3>
+                    <ul class="cards-list" id="tracks">
+                        <!-- filled via js -->
+                    </ul>
+                    <label for="course" class="sr-only">Race Course:</label>
+                    <select id="course" name="course" class="required sr-only">
+                        <option value="trackname" id="trackname">test</option>
+                    </select>
+                </div>
+                <div id="choose-racer">
                 <h3>Choose your racer (mouse over each to display image)</h3>
                 <ul class="cards-list" id="racers">
                     <!-- filled via js -->
@@ -43,6 +44,7 @@
                 <select id="podRacer" name="podRacer" class="required sr-only">
                     <option value="test5">test</option>
                 </select>
+                </div>
                 <button class="button" type="submit" id="submit-create-race">Start Race</button>
             </form>
         </section>
