--- a/src/client/pages/results.html
+++ b/src/client/pages/results.html
@@ -8,12 +8,14 @@
     <title>View Your Race Progress</title>
     <link rel="stylesheet" href="assets/stylesheets/reset.css">
     <link rel="stylesheet" href="assets/stylesheets/index.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Faster+One&family=Syncopate:wght@700&display=swap" rel="stylesheet">
     <script src="/assets/javascript/index.js" charset="utf-8"></script>
 </head>
 
 <body>
     <header>
-        <h1>Race Results</h1>
+        <h1>Race &nbsp; Results</h1>
     </header>
     <main>
         <section>
